[package]
name = "rwsgs"
version = "0.1.0"
edition = "2021"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = "1.0"